--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -5,6 +5,6 @@
   gather_facts: no
 
 - tasks:
-    - name: configure "{{ inventory_hostname }}"hostname
+    - name: configure hostname
       ios_config:
       lines: ansible_net_hostname {{ inventory_hostname }}
