--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -2,6 +2,7 @@
 - name: Change hostname to Inventory hostname
   hosts: ios
   become_method: enable
+  become: yes
   connection: network_cli
   gather_facts: no
   
