--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -2,11 +2,14 @@
 - name: Change hostname to Inventory hostname
   hosts: ios
   become_method: enable
-  connection: network_cli
+  connection: local
   gather_facts: no
   
   tasks:
+  - name: enter enable mode
+      provider:
+        authorize: yes
+
   - name: configure hostname
     ios_config:
-      authorize:
       lines: hostname {{ inventory_hostname }}
