--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -2,7 +2,7 @@
 - name: Change hostname to Inventory hostname
   hosts: ios
   become_method: enable
-  connection: local
+  ansible_connection: local
   gather_facts: no
   
   tasks:
