--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -6,10 +6,7 @@
   gather_facts: no
   
   tasks:
-  - name: enter enable mode
-    provider:
-      authorize: yes
-
   - name: configure hostname
     ios_config:
       lines: hostname {{ inventory_hostname }}
+      become: yes
