--- a/ios/set_hostname.yaml
+++ b/ios/set_hostname.yaml
@@ -9,4 +9,4 @@
   - name: configure hostname
     ios_config:
       lines: hostname {{ inventory_hostname }}
-      authorize: yes
+    become: yes
