--- a/fortios/gather_facts.yaml
+++ b/fortios/gather_facts.yaml
@@ -5,10 +5,10 @@
   gather_facts: no
   
   tasks:
-    name: Retrieve ios_facts
-    fortios_facts:
-      register: facts
+  -  name: Retrieve ios_facts
+     fortios_facts:
+       register: facts
     
-    name: Print results of fortios_facts
-    debug:
+  -  name: Print results of fortios_facts
+     debug:
       msg: "{{ facts }}"
