--- a/fortios/backup_config.yaml
+++ b/fortios/backup_config.yaml
@@ -7,6 +7,7 @@
   tasks:
     - name: Backing up configuration
       fortios_config:
+        filemode: true
         backup: yes
         backup_path: ./backup/
         backup_filename: "{{inventory_hostname}}.conf"
