--- a/fortios/gather_facts.yaml
+++ b/fortios/gather_facts.yaml
@@ -7,6 +7,8 @@
   tasks:
   -  name: Retrieve ios_facts
      fortios_facts:
+       gather_subset:
+         - fact: system_status_select
      register: facts
     
   -  name: Print results of fortios_facts
