--- a/ios/backup_config.yaml
+++ b/ios/backup_config.yaml
@@ -3,6 +3,7 @@
   hosts: ios
   connection: network_cli
   gather_facts: no
+  become: true
 
   tasks:
     - name: Backing up configuration using CLI
